# assessment_project

./: .gitignore  README.md  eld-trip-planner-build-plan.md
backend/: .env.example  build.py  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/scripts/: e2e_verify.py
backend/trips/: models.py  serializers.py  tests.py  urls.py  views.py
backend/trips/hos/: __init__.py  engine.py  geometry.py  sheets.py
backend/trips/migrations/: 0001_initial.py
backend/trips/services/: routing.py
frontend/: index.html
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: LoadingState.jsx  LogSheet.jsx  RouteMap.jsx  StopsTimeline.jsx  TripForm.jsx  TripSummary.jsx
