[project]
name = "eld-trip-planner-api"
version = "1.0.0"
description = "ELD Trip Planner Django API"
requires-python = ">=3.12"
dependencies = [
  "Django>=4.2,<5",
  "djangorestframework>=3.15",
  "django-cors-headers>=4.4",
  "dj-database-url>=2.0",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "whitenoise>=6.6",
]

[tool.vercel]
entrypoint = "config.wsgi:application"

[tool.vercel.scripts]
build = "python build.py"
